update link in header

--- a/lib/ankhanh-recruitment/r-1/index.pug
+++ b/lib/ankhanh-recruitment/r-1/index.pug
@@ -15,50 +15,55 @@ section.canhcam-ankhanh-recruitment-r-1
 				//- row 1
 				tr
 					td 
-						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-2 
-								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
+						a(href="ankhanh-recruitment-detail.html")
+							.row 
+								.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+								.col-xs-4.col-md-2 
+									img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
 					td 21.01.2018
 				//- row 2
 				tr
 					td 
-						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-2 
-								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
+						a(href="ankhanh-recruitment-detail.html")
+							.row 
+								.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+								.col-xs-4.col-md-2 
+									img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
 					td 21.01.2018
 				//- row 3
 				tr
 					td 
-						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-2.no-new
-								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
+						a(href="ankhanh-recruitment-detail.html")
+							.row 
+								.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+								.col-xs-4.col-md-2.no-new
+									img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
 					td 21.01.2018
 				//- row 1
 				tr
 					td 
-						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-2.no-new
-								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
+						a(href="ankhanh-recruitment-detail.html")
+							.row 
+								.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+								.col-xs-4.col-md-2.no-new
+									img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
 					td 21.01.2018
 				//- row 1
 				tr
 					td 
-						.row 
-							.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
-							.col-xs-4.col-md-2.no-new
-								img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
+						a(href="ankhanh-recruitment-detail.html")
+							.row 
+								.col-xs-12.col-md-10 Nhân viên quản lý phòng tập Gym và bể bơi tại Khu đô thị Splendora 
+								.col-xs-4.col-md-2.no-new
+									img.new(src="./img/ankhanh-recruitment/r_1.png", alt="")
 					td 01
 					td Hà Nội
 					td 21.01.2018
