--- a/lib/ankhanh-recruitment/r-1/index.sass
+++ b/lib/ankhanh-recruitment/r-1/index.sass
@@ -52,6 +52,9 @@ section.canhcam-ankhanh-recruitment-r-1
 							padding-left: 3rem
 						&:last-child
 							padding-right: 3rem
+					a 
+						color: color-get($ankhanh, den)
+						text-decoration: none
 				.new
 					
 				img
