--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -16,13 +16,13 @@ header.canhcam-header-14
 			.advbar.d-none.d-lg-flex
 				ul.top-nav(k-menu-map-to="#top-nav")
 					li.nav-item
-						a(href="#").nav-link Tin tức
+						a(href="ankhanh-news.html").nav-link Tin tức
 					li.nav-item
-						a(href="#").nav-link Hỗ trợ khách hàng
+						a(href="ankhanh-customer-support.html").nav-link Hỗ trợ khách hàng
 					li.nav-item
-						a(href="#").nav-link Tuyển dụng
+						a(href="ankhanh-recruitment.html").nav-link Tuyển dụng
 					li.nav-item
-						a(href="#").nav-link Liên hệ
+						a(href="ankhanh-contact.html").nav-link Liên hệ
 				.phone(k-menu-map-to="#phone")
 					p.mb-0.d-flex.align-items-center (84.28) 39105523
 				ul.social
@@ -63,7 +63,7 @@ header.canhcam-header-14
 				li.nav-item
 					a.nav-link(href='ankhanhjvc.html') An khánh jvc
 				li.nav-item
-					a.nav-link(href='#') Nhịp sống splendora
+					a.nav-link(href='ankhanh-resident.html') Nhịp sống splendora
 			#top-nav
 			#phone.d-lg-none
 			#language.d-flex.justify-content-center.py-3.d-lg-none
