update resident (edit font size)

--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -6,7 +6,7 @@
 
 
 html, body
-	font-family: 'Roboto', sans-serif
+	font-family: 'Myriad Pro','Roboto', sans-serif
 	font-size: 14px
 	font-weight: 300
 	height: 100%
