--- a/lib/ankhanh-resident/r-1/index.pug
+++ b/lib/ankhanh-resident/r-1/index.pug
@@ -16,7 +16,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Tưng bừng các hoạt động đón hè 2018 của cư dân Splendora
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
@@ -30,7 +30,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date 
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Khu đô thị Splendora mở lớp yoga và step cho cư dân
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
@@ -44,7 +44,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date 
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Bể bơi chung cư  cao cấp mở cửa hoạt động hè 2018
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
@@ -58,7 +58,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date 
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Cư dân Splendora tích cực tham gia cuộc họp cư dân đầu năm 2018
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
@@ -72,7 +72,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date 
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Hướng dẫn thanh toán phí dịch vụ cư dân Splendora
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
@@ -86,7 +86,7 @@ section.canhcam-ankhanh-resident-r-1
 									.col-2.date 
 										p.day 08
 										time 08/2018
-									.col-10.title
+									.col-10.resident-title
 										h3 Vai trò của các bên trong công tác PCCC ở căn hộ
 								p.content Mùa hè đến là thời điểm các gia đình, đặc biệt là những gia đình có con nhỏ, luôn tìm kiếm các hoạt động bổ ích, nơi các thành viên có thể cùng gắn kết. Hãy cùng xem các cư dân Splendora đã đón hè 2015 như thế nào nhé.
 								//- hr
