--- a/lib/ankhanh-news/n-1/index.pug
+++ b/lib/ankhanh-news/n-1/index.pug
@@ -8,7 +8,7 @@ section.canhcam-ankhanh-news-n-1
 			.row#products
 				//- n-1 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_1.png", alt="alt")
 							figcaption.box
@@ -22,7 +22,7 @@ section.canhcam-ankhanh-news-n-1
 								//- hr
 				//- n-2 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_2.png", alt="alt")
 							figcaption.box
@@ -36,7 +36,7 @@ section.canhcam-ankhanh-news-n-1
 								//- hr
 				//- n-3 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_3.png", alt="alt")
 							figcaption.box
@@ -50,7 +50,7 @@ section.canhcam-ankhanh-news-n-1
 								//- hr
 				//- n-4 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_4.png", alt="alt")
 							figcaption.box
@@ -64,7 +64,7 @@ section.canhcam-ankhanh-news-n-1
 								//- hr
 				//- n-5 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_5.png", alt="alt")
 							figcaption.box
@@ -78,7 +78,7 @@ section.canhcam-ankhanh-news-n-1
 								//- hr
 				//- n-6 
 				.col-sm-6.col-lg-4
-					a.item(href="javascript:void(0)")
+					a.item(href="ankhanh-news-detail.html")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-news/n_6.png", alt="alt")
 							figcaption.box
