update font size: customer support, recruitment

--- a/lib/ankhanh-customer-support/c-1/index.pug
+++ b/lib/ankhanh-customer-support/c-1/index.pug
@@ -158,6 +158,7 @@ section.canhcam-ankhanh-customer-support-c-1
 				//- ankhanh-Panigation
 				include ../../ankhanh-panigation/p-1/index.pug
 			.col-lg-4
+				//- form
 				form.validator
 					h4 Gửi câu hỏi
 					.form-group
