--- a/lib/ankhanh-recruitment/r-1/index.pug
+++ b/lib/ankhanh-recruitment/r-1/index.pug
@@ -2,7 +2,7 @@ section.canhcam-ankhanh-recruitment-r-1
 	.container
 		.row 
 			.col-10.mx-auto
-				h1.h1.text-center.text-uppercase TUYỂN DỤNG
+				h1.h1.text-center.text-uppercase VỊ TRÍ TUYỂN DỤNG
 		.container
 		table.table.table-striped
 			thead
