--- a/lib/ankhanh-recruitment/r-1/index.sass
+++ b/lib/ankhanh-recruitment/r-1/index.sass
@@ -5,6 +5,9 @@
 body
 	background: url('../img/ankhanh-background/b_1.png') center center
 section.canhcam-ankhanh-recruitment-r-1
+	+pad(2rem 0)
+	+media-breakpoint-up(lg)
+		+pad(4rem 0)
 	h1 
 		+fz(2rem)
 		+fw(600)
@@ -13,6 +16,7 @@ section.canhcam-ankhanh-recruitment-r-1
 		+media-breakpoint-up(lg)
 			+fz(r(36px))
 	table 
+		margin-bottom: 0rem !important
 		thead 
 			background: color-get($ankhanh, main)
 			border: none
@@ -25,6 +29,8 @@ section.canhcam-ankhanh-recruitment-r-1
 					border: none
 					vertical-align: top
 					text-align: center
+					+media-breakpoint-up(lg)
+						+fz(r(18px))
 					+media-breakpoint-up(md)
 						&:first-child
 							text-align: left
@@ -40,12 +46,16 @@ section.canhcam-ankhanh-recruitment-r-1
 					+fz(1.07rem)
 					+fw(400)
 					border: none
+					+media-breakpoint-up(lg)
+						+fz(r(18px))
 				td 
 					+fz(1.07rem)
 					+fw(100)
 					border: none
 					&:nth-child(2), &:nth-child(3),&:nth-child(4)
 						text-align: center
+					+media-breakpoint-up(lg)
+						+fz(r(16px))
 					+media-breakpoint-up(md)
 						&:first-child
 							text-align: left
