--- a/lib/ankhanh-contact/c-1/index.sass
+++ b/lib/ankhanh-contact/c-1/index.sass
@@ -5,10 +5,10 @@
 body
 	background: url('../img/ankhanh-background/b_1.png') center center
 .canhcam-ankhanh-contact-c-1
-	margin-bottom: 5.64rem
-	h2 
-		+fz(2rem)
-		+mar(3.85rem 0 2rem 0)
+	margin-bottom: 2rem
+	h1 
+		+fz(2.57rem)
+		+mar(2rem 0 2rem 0)
 		+fw(bold)
 		color: color-get($ankhanh, main)
 		+media-breakpoint-up(lg)
@@ -17,6 +17,7 @@ body
 		h3
 			+fz(r(20px))
 			text-transform: uppercase
+			color: color-get($ankhanh, trang)
 		.inf
 			background: color-get($ankhanh, main)
 			+pad(2rem)
@@ -27,12 +28,16 @@ body
 					+fw(400)
 					+mar(0)
 					color: color-get($ankhanh, trang)
+					+media-breakpoint-up(lg)
+						+fz(r(36px))
 			p 
 				+fz(1.14rem)
 				+fw(100)
 				margin-bottom: .5rem
 				color: color-get($ankhanh, trang)
 				opacity: .8
+				+media-breakpoint-up(lg)
+					+fz(r(16px))
 		.company
 			+mar(0 0 3.5rem 0)
 	form
@@ -40,6 +45,8 @@ body
 			background: darken(color-get($ankhanh,trang) ,3%)
 			+fz(1rem)
 			+fw(100)
+			+media-breakpoint-up(lg)
+				+fz(r(14px))
 		.form-control
 			color: color-get($ankhanh, den)
 			+pad(.6rem 1rem)
@@ -71,15 +78,18 @@ body
 			justify-content: center
 			align-items: center
 			display: flex
-			padding: rem
+			+pad(.5rem 2.5rem)
 			margin: 0.5rem 0
 			border-radius: 25px
 			appearance:none !important
 			+transition(all .5s ease-in-out)
 			a
+				// font-family: 'Saira'
 				+fw(bold)
 				color: color-get($ankhanh, xam-submit)
 				+fz(1.07rem)
+				+media-breakpoint-up(lg)
+					+fz(r(15px))
 			+media-breakpoint-up(md)
 				&:hover
 					background: lighten(color-get($ankhanh, xam-3), 2%)
