update font size progress

--- a/lib/ankhanh-progress/p-1/index.pug
+++ b/lib/ankhanh-progress/p-1/index.pug
@@ -19,54 +19,54 @@ section.canhcam-ankhanh-progress-p-1
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_1.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 01
 				//- n-2 
 				.col-sm-6.col-lg-4
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_2.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 02
 				//- n-3 
 				.col-sm-6.col-lg-4
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_3.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 03
 				//- n-4 
 				.col-sm-6.col-lg-4
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_4.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 04
 				//- n-5 
 				.col-sm-6.col-lg-4
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_5.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 05
 				//- n-6 
 				.col-sm-6.col-lg-4
 					a.item(href="javascript:void(0)")
 						figure
 							img.w-100.img-fluid(src="./img/ankhanh-progress/p_6.png", alt="alt")
-							figcaption.box
+							figcaption.box-progress
 								.row.no-gutters.text-progress
-									.col-12.title
+									.col-12
 										h3 Tháng 06
 		//- Panigation
 		include ../../ankhanh-panigation/p-1/index.pug
