--- a/lib/ankhanh-progress/p-1/index.sass
+++ b/lib/ankhanh-progress/p-1/index.sass
@@ -20,7 +20,7 @@ body
 	h1 
 		+fz(2rem)
 		+fw(600)
-		margin-bottom: 2rem
+		margin-bottom: 1rem
 		color: color-get($ankhanh, main)
 		+media-breakpoint-up(lg)
 			+fz(r(36px))
@@ -42,8 +42,8 @@ body
 				+transition(all .5s ease-in-out)
 				position: relative
 				img
-				figcaption.box 
-					background: color-get($ankhanh, xam-3)
+				figcaption.box-progress
+					background: color-get($ankhanh, xam-4)
 					+transition(all .5s ease-in-out)
 					margin-bottom: 2rem
 					.text-progress
@@ -77,15 +77,13 @@ body
 								justify-content: center
 								align-items: center 
 								text-align: center
-						.title
-							+pad(0 1.5rem)
 					h3
 						+fz(1.28rem)
 						+fw(400)
 						line-height: 1.5rem
 						color: color-get($ankhanh,den)
 						text-align: center
-						margin-bottom: 0
+						margin-bottom: 0 !important
 					time
 						+fz(.9rem)
 						+fw(200)
@@ -103,7 +101,7 @@ body
 						padding-right: 1.5rem
 			+media-breakpoint-up(md)
 				&:hover
-					figcaption.box 
+					figcaption.box-progress
 						background: -moz-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
 						background: -webkit-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
 						background: -ms-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
@@ -112,7 +110,7 @@ body
 							color: color-get($ankhanh,trang)
 			+media-breakpoint-down(md)
 				&:active
-					figcaption.box 
+					figcaption.box-progress
 						background: -moz-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
 						background: -webkit-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
 						background: -ms-linear-gradient( 180deg, rgb(177,131,8) 0%, rgb(242,218,133) 100%)
