--- a/lib/ankhanh-contact/c-1/index.sass
+++ b/lib/ankhanh-contact/c-1/index.sass
@@ -73,16 +73,18 @@ body
 				width: 50%
 		.btn-submit
 			cursor: pointer
-			width: 80%
+			width: 70%
 			background: color-get($ankhanh, xam-3)
 			justify-content: center
 			align-items: center
 			display: flex
-			+pad(.5rem 2.5rem)
 			margin: 0.5rem 0
 			border-radius: 25px
 			appearance:none !important
 			+transition(all .5s ease-in-out)
+			+media-breakpoint-up(md)
+				width: 100%
+				+pad(.5rem 2.5rem)
 			a
 				// font-family: 'Saira'
 				+fw(bold)
@@ -91,6 +93,7 @@ body
 				+media-breakpoint-up(lg)
 					+fz(r(15px))
 			+media-breakpoint-up(md)
+				+pad(.5rem 2.5rem)
 				&:hover
 					background: lighten(color-get($ankhanh, xam-3), 2%)
 			+media-breakpoint-down(md)
