update header background

--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -68,7 +68,7 @@
 				color: color-get($ankhanh,den)
 			&.active
 				a
-					color: color-get($ankhanh,extra)
+					color: color-get($ankhanh,main)
 	.social
 		margin-bottom: 0
 		list-style: none
@@ -90,16 +90,16 @@
 				+lh(25px)
 				color: color-get($ankhanh,trang)
 	.k-menu-bar
-		color: color-get($ankhanh,extra)
+		color: color-get($ankhanh,main)
 		.k-button-toggle
-			color: color-get($ankhanh,extra)
+			color: color-get($ankhanh,main)
 		.navbar-brand
 			img
 				max-height: 3rem
 		.nav
 			.nav-item
 				.nav-link
-					color: color-get($ankhanh,extra)
+					color: color-get($ankhanh,main)
 		
 	.k-responsive-menu
 		background: color-get($ankhanh,trang)
@@ -118,10 +118,10 @@
 					border-bottom: 1px solid darken(color-get($ankhanh,trang),10%)
 				&:hover, &.active, &.show
 					.nav-link
-						color: color-get($ankhanh,extra)
+						color: color-get($ankhanh,main)
 		.k-menu-bar
 			.k-button-toggle
-				color: color-get($ankhanh,extra)
+				color: color-get($ankhanh,main)
 	
 	// CHANGE MENU
 
@@ -156,14 +156,14 @@
 								+lh(0)
 					&:hover, &.active, &.show
 						.nav-link
-							color: color-get($ankhanh,extra)
+							color: color-get($ankhanh,main)
 							position: relative
 							&:after
 								content: ''
 								width: 100%
 								height: 3px
 								+pos(abs, null null 0 0)
-								background: color-get($ankhanh,extra)
+								background: color-get($ankhanh,main)
 					.dropdown-menu
 						.dropdown-item
 							color: lighten(color-get($ankhanh,den),40%)
@@ -201,7 +201,7 @@
 						+pad(0 1rem)
 						background: none
 						p
-							color: color-get($ankhanh,extra)
+							color: color-get($ankhanh,main)
 					.language
 						padding-left: 1rem
 		&.fixedheader
