--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -1,4 +1,4 @@
-header.canhcam-header-14
+header.canhcam-header-14(bg-img="../img/ankhanh-background/b_3.png")
 	.k-menu-bar.container
 		#logo.mr-auto
 		#search
