--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -7,6 +7,8 @@
 .canhcam-header-14
 	background: color-get($ankhanh,trang)
 	box-shadow: 0 0 5px rgba(0,0,0,.5)
+	+media-breakpoint-down(md)
+		background-image: none !important
 	&.fixedheader
 		position: fixed
 		top: 0
