update responsive image footer

--- a/lib/ankhanh-footer/f-1/index.sass
+++ b/lib/ankhanh-footer/f-1/index.sass
@@ -7,6 +7,8 @@
 	background-position: center center
 	+pad(5rem 0 5.71rem)
 	color: color-get($ankhanh, trang)
+	+media-breakpoint-down(md)
+		background-image: none !important
 	i, .mdi 
 		font-size: 1.07rem
 		padding: 0 0.78rem 0 0
