update background img

--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -17,7 +17,6 @@
 		z-index: 999
 		transition: all .25s ease-in-out
 		&.active , &.expand
-	
 	.advbar
 		+mar(0)
 		+pad(.5rem null)
@@ -239,3 +238,6 @@
 						img
 							max-height: 3rem
 							max-width: 200px
+.canhcam-header-14.fixedheader.active
+	background: color-get($ankhanh,trang) !important
+	background-image: none !important
