--- a/lib/introduce/quyhoach/q-1/index.pug
+++ b/lib/introduce/quyhoach/q-1/index.pug
@@ -16,34 +16,34 @@ section.canhcam-introduce-detail-2#canhcam-detail-section-2(bg-img="./img/bg/bg-
 								li.item.mb-4
 									h3.brief-content Quy hoạch phân khu chức năng
 								li.item.mb-4
-									p.item-content.mb-3 Khu thương mại (498,000 m
+									p.content.mb-3 Khu thương mại (498,000 m
 										sup 2
 										|)
 									ul.circle
 										li
-											p Tòa tháp thương mại cao tầng tọa lạc tại vị trí trung tâm của dự án.
+											p.content Tòa tháp thương mại cao tầng tọa lạc tại vị trí trung tâm của dự án.
 										li 
-											p Các khu vực nhà cộng đồng.
+											p.content Các khu vực nhà cộng đồng.
 								li.item.mb-4
-									p.item-content.mb-3 Nhà ở (8,593 căn)
+									p.content.mb-3 Nhà ở (8,593 căn)
 									ul.circle
 										li
-											p Biệt thự được thiết kế theo phong cách kiến trúc châu Âu.
+											p.content Biệt thự được thiết kế theo phong cách kiến trúc châu Âu.
 										li
-											p Liền kề được thế kế có vườn cảnh với 3 kiểu khác nhau.
+											p.content Liền kề được thế kế có vườn cảnh với 3 kiểu khác nhau.
 										li
-											p Chung cư cao tầng.
+											p.content Chung cư cao tầng.
 								li.item.mb-4
-									p.item-content.mb-3 Tiện ích công cộng hiện đại
+									p.content.mb-3 Tiện ích công cộng hiện đại
 									ul.circle
 										li
-											p Hệ thống giáo dục bao gồm trường mẫu giáo, trường tiểu học, trung học cơ sở và phổ thông trung học.
+											p.content Hệ thống giáo dục bao gồm trường mẫu giáo, trường tiểu học, trung học cơ sở và phổ thông trung học.
 										li
-											p Phòng khám.
+											p.content Phòng khám.
 										li
-											p Công viên hồ điều hòa trung tâm.
+											p.content Công viên hồ điều hòa trung tâm.
 										li
-											p Hệ thống nhà hàng và trung tâm giải trí.
+											p.content Hệ thống nhà hàng và trung tâm giải trí.
 			.row.mb-4
 				h3.brief-content.text-left.mb-4.mb-lg-5 Kế hoạch sử dụng đất
 				.col-12
