--- a/lib/introduce/tongquan/t-1/index.sass
+++ b/lib/introduce/tongquan/t-1/index.sass
@@ -20,6 +20,8 @@ section.canhcam-introduce-detail-1
 			.brief-content
 				+fz(r(22px))
 				color: color-get($ankhanh,brief-content)
+			.content
+				+fz(r(16px))
 		// +media-breakpoint-up(lg)
 		// 	.slide
 		// 		+pad(null 6rem)
