--- a/lib/product/BT5/b-2/index.sass
+++ b/lib/product/BT5/b-2/index.sass
@@ -36,6 +36,7 @@
 			opacity: .9
 			+mar(4rem 0)
 			.content
+				+fz(r(16px))
 				color: color-get($ankhanh,trang)
 			.h3
 				color: color-get($ankhanh,trang)
