--- a/lib/ankhanh-breadcrumb/b-1/index.pug
+++ b/lib/ankhanh-breadcrumb/b-1/index.pug
@@ -5,8 +5,7 @@ section.canhcam-ankhanh-breadcrumb
 		.container
 			ol.breadcrumb
 				li.breadcrumb-item
-					a(href='#') 
-						i.fa.fa-home
+					a(href='#') Trang chu3
 				li.breadcrumb-item
 					a(href='#') Góc cư dân
 				li.breadcrumb-item.active(aria-current='page') Tin tức
